Remove bottom scrollbar in messages index bug
Fixes #4.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,47 +1,11 @@
 @import 'variables';
-@import 'jetbrains-mono';
+
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-select/sass/bootstrap-select';
 @import '~flag-icon-css/sass/flag-icon';
 
-.message-type-col {
-  @extend .col-1;
-  flex: 0 0 52px;
-  max-width: 52px;
-}
-
-.message-field {
-  &:not(.is-modified) {
-    border-top-right-radius: $input-border-radius !important;
-    border-bottom-right-radius: $input-border-radius !important;
-  }
-
-  &.is-accepted {
-    border-color: $success;
-
-    &:focus {
-      border-color: $success;
-      box-shadow: 0 0 0 $input-focus-width rgba($success, .25);
-    }
-  }
-
-  &.is-modified {
-    border-color: $dark;
-
-    &:focus {
-      border-color: $dark;
-      box-shadow: 0 0 0 $input-focus-width rgba($dark, .25);
-    }
-  }
-
-  &.is-modified + .message-submit {
-    display: flex;
-  }
-}
-
-.message-submit {
-  display: none;
-}
+@import 'jetbrains-mono';
+@import 'parts/messages-index';
 
 .logo {
     font: 500 18px 'JetBrains Mono', monospace;
@@ -72,39 +36,3 @@
 .bootstrap-select .no-results {
     background: none;
 }
-
-.messages-table {
-    thead th, tbody td {
-        vertical-align: middle;
-    }
-
-    thead th {
-        position: relative;
-        padding-top: calc(#{$table-cell-padding} + 5px);
-
-        .translation-progress-bg {
-            position: absolute;
-            top: 0;
-            right: 0;
-            left: 0;
-            height: 5px;
-            background: $border-color;
-        }
-
-        .translation-progress {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 5px;
-        }
-    }
-
-    th code {
-        overflow-wrap: anywhere;
-    }
-
-    .form-group:last-child {
-        margin-bottom: 0;
-    }
-}
-
